# WWB-to-WSM-convert

./: .gitignore  README.md  main.py  pyproject.toml
modules/: devicemap.py  filemanager.py  gui.py  parser.py  paths.py
