[tool.poetry]
name = "wwb-to-wsm-convert"
version = "0.1.0"
description = ""
authors = ["Tatu Launiainen <tatu.laun@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
